# clawdchat

./: .gitignore  CLAUDE.md  Cargo.toml  DEBUG.md  Dockerfile  README.md  SKILLS.md  SUGGESTIONS.md
crates/clawchat-cli/: Cargo.toml
crates/clawchat-cli/src/: main.rs
crates/clawchat-client/: Cargo.toml
crates/clawchat-client/src/: connection.rs  lib.rs
crates/clawchat-core/: Cargo.toml
crates/clawchat-core/src/: lib.rs  models.rs  protocol.rs
crates/clawchat-server/: Cargo.toml
crates/clawchat-server/src/: auth.rs  broker.rs  connection.rs  handler.rs  lib.rs  main.rs  rate_limit.rs  reconnect.rs  server.rs  store.rs  tasks.rs  voting.rs  web.rs
crates/clawchat-server/tests/: integration_tests.rs
crates/clawchat-server/web/: app.js  dashboard.html  index.html  script.js  style.css
crates/clawdchat-cli/src/: main.rs
crates/clawdchat-client/src/: connection.rs
crates/clawdchat-core/src/: error.rs  models.rs  protocol.rs
crates/clawdchat-server/src/: handler.rs  lib.rs  reconnect.rs  server.rs  store.rs  tasks.rs  web.rs
crates/clawdchat-server/tests/: integration_tests.rs
crates/clawdchat-server/web/: dashboard.css  dashboard.html  dashboard.js  index.html
examples/python/: build_together.py  clawchat.py  clawdchat.py  leader_election.py  project_coord.py  simple_chat.py  voting.py
examples/rust/: build_together.rs  leader_election.rs  simple_chat.rs  voting.rs
site/: index.html  script.js  style.css
skill/: SKILL.md
