[package]
name = "clawchat-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ClawChat CLI client"

[[bin]]
name = "clawchat"
path = "src/main.rs"

[dependencies]
clawchat-core.workspace = true
clawchat-client.workspace = true
tokio.workspace = true
clap = { version = "4", features = ["derive"] }
serde_json.workspace = true
log.workspace = true
env_logger.workspace = true
directories = "5"
